Import patches-unapplied version 5-20150410-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 40ec4fce53cfbdfb9d5d0e09a8c3515b1ea35f16

New changelog entries:
  * Update to SVN 20150410
  [ Matthias Klose ]
  * Fix /usr/include/c++/5.0.0 symlink.
  * Re-enable building the D frontend. Closes: #782254.
  * gccgo: Install libnetgo.
  [ Samuel Thibault ]
  * Fix ada builds on the Hurd and KFreeBSD. Closes: #781424.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+gcc-5 (5-20150410-1) experimental; urgency=medium
+
+  * Update to SVN 20150410
+
+  [ Matthias Klose ]
+  * Fix /usr/include/c++/5.0.0 symlink.
+  * Re-enable building the D frontend. Closes: #782254.
+  * gccgo: Install libnetgo.
+
+  [ Samuel Thibault ]
+  * Fix ada builds on the Hurd and KFreeBSD. Closes: #781424.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 11 Apr 2015 02:24:08 +0200
+
 gcc-5 (5-20150404-1) experimental; urgency=medium
 
   * Update to SVN 20150404.
