--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gcc-5 (5.1.1-2) unstable; urgency=medium
+
+  * Update to SVN 20150428 (r222550, 5.1.1) from the gcc-5-branch.
+  * Fix the gnat build dependency.
+  * Don't build go and gofmt for cross compilers.
+
+ -- Matthias Klose <doko@ubuntu.com>  Tue, 28 Apr 2015 23:57:14 +0200
+
 gcc-5 (5.1.1-1) unstable; urgency=medium
 
   * GCC 5.1.0 release.
