--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+gcc-5 (5.1.1-4) unstable; urgency=medium
+
+  * Update to SVN 20150503 (r222751, 5.1.1) from the gcc-5-branch.
+    - Fix build failure on alpha.
+  * Fix applying the cross-biarch patch for stage1 builds.
+  * Fix libstdc++ symbols files for kfreebsd-amd64.
+  * Remove libn32phobos-5-dev from the control file.
+  * Really disable gnat on x32.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 02 May 2015 19:18:57 +0200
+
 gcc-5 (5.1.1-3) unstable; urgency=high
 
   * Update to SVN 20150430 (r222660, 5.1.1) from the gcc-5-branch.
