Import patches-unapplied version 5.1.1-11 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 94d6f0705570ecd1c099064c8f083a002cc7a1e2

New changelog entries:
  * Update to SVN 20150616 (r224519, 5.1.1) from the gcc-5-branch.
  * gccgo: escape: Analyze binary expressions (taken from the trunk).
  * Explicitly build with -Wl,--no-relax on alpha again.
  * Build with -O1 on sh4 (try to work around PR target/66358).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gcc-5 (5.1.1-11) unstable; urgency=medium
+
+  * Update to SVN 20150616 (r224519, 5.1.1) from the gcc-5-branch.
+  * gccgo: escape: Analyze binary expressions (taken from the trunk).
+  * Explicitly build with -Wl,--no-relax on alpha again.
+  * Build with -O1 on sh4 (try to work around PR target/66358).
+
+ -- Matthias Klose <doko@debian.org>  Tue, 16 Jun 2015 16:11:59 +0200
+
 gcc-5 (5.1.1-10) unstable; urgency=medium
 
   * Update to SVN 20150613 (r224454, 5.1.1) from the gcc-5-branch.
